# docs/swagger.json
@@ -8,212 +8,6 @@
     },
     "basePath": "/",
     "paths": {
-        "/arena/add-car": {
-            "post": {
-                "description": "Add a car to the player's slot in a specific arena",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Arena"
-                ],
-                "summary": "Add a car to slot",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Player Access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Add car to slot request payload",
-                        "name": "addCarReq",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.AddCarArenaRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Car added to slot successfully",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request. Invalid payload",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "404": {
-                        "description": "Car or player not found",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    }
-                }
-            }
-        },
-        "/arena/end": {
-            "post": {
-                "description": "Ends the current challenge and saves the data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Arena"
-                ],
-                "summary": "End Challenge",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "The ID of the player",
-                        "name": "playerId",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "End Challenge Request",
-                        "name": "challengereq",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.EndChallengeReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorised",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    }
-                }
-            }
-        },
-        "/arena/get": {
-            "get": {
-                "description": "Gets the list of all the arenas",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Arena"
-                ],
-                "summary": "Get Arenas",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    }
-                }
-            }
-        },
-        "/arena/replace-car": {
-            "put": {
-                "description": "Add or replaces the car in the arena car slot",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Arena"
-                ],
-                "summary": "Replace Car",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "The ID of the player",
-                        "name": "playerId",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Replace car Request",
-                        "name": "challengereq",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.ReplaceReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorised",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Success"
-                        }
-                    }
-                }
-            }
-        },
         "/car/buy": {
             "post": {
                 "security": [
@@ -1842,6 +1636,28 @@
                 }
             }
         },
+        "request.AddGarageRequest": {
+            "type": "object",
+            "properties": {
+                "coinsRequired": {
+                    "description": "coins required to unlock the garage",
+                    "type": "integer"
+                },
+                "garageName": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "level": {
+                    "description": "level reuired to unlock the garage",
+                    "type": "integer"
+                },
+                "longitute": {
+                    "type": "number"
+                }
+            }
+        },
         "request.CarRequest": {
             "type": "object",
             "properties": {
@@ -1874,23 +1690,6 @@
                     "type": "string"
                 },
                 "colorType": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.EndChallengeReq": {
-            "type": "object",
-            "properties": {
-                "arenaId": {
-                    "type": "string"
-                },
-                "playerId": {
-                    "type": "string"
-                },
-                "raceId": {
-                    "type": "string"
-                },
-                "winTime2": {
                     "type": "string"
                 }
             }
@@ -1988,6 +1787,31 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "request.UpdateGarageReq": {
+            "type": "object",
+            "properties": {
+                "coinsRequired": {
+                    "description": "coins required to unlock the garage",
+                    "type": "integer"
+                },
+                "garageId": {
+                    "type": "string"
+                },
+                "garageName": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "level": {
+                    "description": "level reuired to unlock the garage",
+                    "type": "integer"
+                },
+                "longitute": {
+                    "type": "number"
                 }
             }
         },
